--- a/html/pagina3.html
+++ b/html/pagina3.html
@@ -22,7 +22,7 @@
 			</div>
 			<div class="col-md-6">
 < HEAD
-				<A ID="enlace3" HREF="pagina4.html">Mi cuarta página HTML</A><span>&rarr;</span>
+				<A id="enlace3" HREF="pagina4.html">Mi cuarta página HTML</A><span>&rarr;</span>
 =======
 				<a id="enlace3" href="pagina4.html">Mi cuarta página HTML</a><span>→</span> 3e105fb9d09db533e0ef063aa71f354a82b92c1e
 			</div>
